--- a/app/views/grades/show.html.erb
+++ b/app/views/grades/show.html.erb
@@ -5,14 +5,14 @@
 	<tr>
 		<td class="leftcol"><label for="student_id">Student Name</label></td>
 		<td width=3%><b>:</b></td>
-		<td><%=h @grade.student_id.blank? ? "" : @grade.studentgrade.formatted_mykad_and_student_name %></td>
+		<td><%=h check_kin {@grade.studentgrade.formatted_mykad_and_student_name} %></td>
 	</tr>
 	
 	
 	<tr>
 		<td class="leftcol"><label for="subject_id">Subject Name</label></td>
 		<td><b>:</b></td>
-		<td><%=h @grade.subject_id.blank? ? "" : @grade.subjectgrade.subject_code_with_subject_name %></td>
+		<td><%=h check_kin {@grade.subjectgrade.subject_code_with_subject_name} %></td>
 	</tr>
 	</table>
 	
