--- a/app/views/examquestions/show.html.erb
+++ b/app/views/examquestions/show.html.erb
@@ -10,7 +10,7 @@
 	<tr>
 		<td class="leftcol"><label for="creator_id">Creator</label></td>
 		<td><b>:</b></td>
-		<td><%=h @examquestion.creator_id? ? @examquestion.creator_details : "" %></td>
+		<td><%=h check_kin {@examquestion.creator.staff_name_with_title} %></td>
 	</tr>
 
 	<tr>
