--- a/app/views/sdiciplines/_form.html.erb
+++ b/app/views/sdiciplines/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="tform">
-	<% if @sdicipline.status.blank? %>
+	<% if @sdicipline.status.blank? || @sdicpline.nil? %>
 	<H2>Report Details</H2>
   <table width=100% border=0>
 		<tr>
