--- a/app/views/counsellings/index.html.erb
+++ b/app/views/counsellings/index.html.erb
@@ -30,7 +30,7 @@
     <td><%=h scsession.scsappointnum %></td>
     <td><%=h scsession.issue %></td>
     <td><%=h scsession.scsessiondt.blank? ? "-": scsession.scsessiondt.strftime(" %A,  %d %B %Y ") %></td>
-    <td><%=h scsession.scsessiondtduration.strftime("%I:%M %p") %></td>
+    <td><%=h scsession.scsessiondtduration.blank? ? "-" : scsession.scsessiondtduration.strftime("%I:%M %p") %></td>
   <!--  <td><%=h counselling.file_details %></td>-->
     <td width=10px ><%= link_to image_tag("document.png", :border => 0), :action => 'show', :id => counselling %></td>
     <td width=10px ><%= link_to image_tag("edit.png", :border => 0), :action => 'edit', :id => counselling %></td>
