Fixed house phone no is not displayed + display phone sample format(staffs & students)

--- a/app/views/staffs/_form.html.erb
+++ b/app/views/staffs/_form.html.erb
@@ -52,11 +52,11 @@
 		<tr>
 			<td class="leftcol"><label for="phonecell"><%= t 'staff.phonecell' %></label></td>
 			<td><b>:</b></td>
-			<td><%= f.text_field :phonecell, :size => 14 %></td></tr>
+			<td><%= f.text_field :phonecell, :size => 14 %><font color="grey", size="-2"> example : 012766XXXX / 012-766XXXX </font></td></tr>
 		<tr>
 			<td class="leftcol"><label for="phonehome"><%= t 'staff.phonehome' %></label></td>
 			<td><b>:</b></td>
-			<td><%= f.text_field :phonehome, :size => 14 %></td></tr>
+			<td><%= f.text_field :phonehome, :size => 14 %><font color="grey", size="-2"> example : 078992XXX / 07-8992XXX </font></td></tr>
 		<tr>
 			<td class="leftcol"><label for="addr"><%= t 'staff.addr' %></label><font color="red"> * </font></td>
 			<td><b>:</b></td>
