--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -51,19 +51,19 @@
 			<tr>
 					<td class="leftcol"><%= t 'student.stelno' %></td>
 					<td><b>:</b></td>
-					<td><%= f.text_field :stelno %></td>
+					<td><%= f.text_field :stelno %><font color="grey", size="-2"> example : 012766XXXX </font></td>
 			</tr>
 			
 			<tr>
 					<td class="leftcol"><label for="phoneoffice"><%= t 'student.phoneoffice' %></label></td>
 					<td><b>:</b></td>
-					<td><%= f.text_field :phoneoffice %></td>
+					<td><%= f.text_field :phoneoffice %><font color="grey", size="-2"> example : 073009XXX </font></td>
 			</tr>
 			
 			<tr>
 					<td class="leftcol"><label for="phonehome"><%= t 'student.phonehome' %></label></td>
 					<td><b>:</b></td>
-					<td><%= f.text_field :phonehome %></td>
+					<td><%= f.text_field :phonehome %><font color="grey", size="-2"> example : 078992XXX </font></td>
 			</tr>
 			
 			<tr><!--17/11/2011 - Shaliza added translation for address and address duty-->
