Fixed - Start Date Sort Link Not Functional

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -15,7 +15,7 @@
 <div class="tlist">
 	<table width=100% border="0" cellpadding="0" cellspacing="0">
 	  <tr>
-    	<th><a href="?sort_by=evenstdt"><%= t 'event.eventstdt' %></a></th>
+    	<th><%= sortable "eventstdt", (t 'event.eventstdt') %></th>
 	    <th><%= t 'event.eventendt' %></th>
 	    <th><%= t 'event.eventname' %></th>
 	    <th><%= t 'event.location' %></th>
