Fixed-emergency contact displayes incorrectly

--- a/app/views/staffs/_form.html.erb
+++ b/app/views/staffs/_form.html.erb
@@ -300,7 +300,7 @@
 	</div>
 
 	<div><!--12/12/2011 - Shaliza changed label name nested model-->
-	  <H2>Individu Course</H2>
+	  <H2>Individual Course</H2>
 		<table width=100% border=1 cellspacing=0 BORDERCOLOR="#C0C0C0 " BORDERSTYLE="solid">
 			<th width=20% align="center">Course Name </font></th>
 			<th width=25% align="center">Start Date</th>
