--- a/app/views/travelclaims/show.html.erb
+++ b/app/views/travelclaims/show.html.erb
@@ -16,7 +16,7 @@
 		<tr>
 			<td ><label for="Travel Details"><%= t 'claim.travel_details' %></label></td>
 			<td><b>:</b></td>
-	        <td><%=h travelclaimrequest.travelrequest.travel_request_key %></td>
+	        <td><%=h check_kin{travelclaimrequest.travelrequest.travel_request_key} %></td>
 		</tr>
 		
 	<tr>
