Fixed-some items unable to be printed(office supplies-PRINT-line 65) + minor changes on SHOW & EDIT page

--- a/app/views/suppliers/_addsupplier_fields.html.erb
+++ b/app/views/suppliers/_addsupplier_fields.html.erb
@@ -19,7 +19,7 @@
 		</tr>
 		
 		<tr>
-			<td class="leftcol"><label for="addressbook_id">Received By</label></td>
+			<td class="leftcol"><label for="addressbook_id">Received From</label></td>
 			<td><b>:</b></td>
 			<td> <%= f.collection_select :addressbook_id, Addbook.find(:all), :id, :name, :include_blank => true %></td>
 		</tr>
