--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -74,7 +74,7 @@
 		<tr>
 			<td class="leftcol"><label for="receivedby "> Received From</label></td>
 			<td><b>:</b></td>
-			<td><%=h addsupplier.addsupp.name %></td>
+			<td><%=h check_kin {addsupplier.addsupp.name} %></td>
 		</tr>
 
 		<tr>
