--- a/app/views/exammakers/_form.html.erb
+++ b/app/views/exammakers/_form.html.erb
@@ -15,7 +15,7 @@
 		<tr>
 			<td class="leftcol">Creator Name</td>
 			<td><b>:</b></td>
-			<td><%= f.collection_select :creator_id, Staff.find(:all), :id, :staff_name_with_title, :include_blank => true %></td>
+			<td><%= f.collection_select :creator_id, Staff.find(:all, :order => 'titlecd_id ASC'), :id, :staff_name_with_title, :include_blank => true %></td>
 		</tr>
 		
 		<tr>
