--- a/app/views/examquestions/_exammcqanswer_fields.html.erb
+++ b/app/views/examquestions/_exammcqanswer_fields.html.erb
@@ -2,5 +2,5 @@
 	<%= f.text_field :sequence, :size => 3 %> &nbsp; &nbsp;
 	<!--<#%= f.select :sequence, options_for_select(['a','b','c','d','e','f'], @exammcqanswer.sequence) %>-->
 	<%= f.text_field :answer, :placeholder => 'Answer' %> &nbsp; &nbsp; <%= f.hidden_field :_destroy %>
-	<%= link_to_remove_fields image_tag("delete.png", :border => 0, :title => 'Remove'), f %> <font color="grey", size="-2">Example: i ABC</font>
+	<%= link_to_remove_fields image_tag("delete.png", :border => 0, :title => 'Remove'), f %> <font color="grey", size="-2">Example: i-choice 1</font>
 </div>
